--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>abiburns.github.io - About</title>
+<title>abiburns.github.io - Abigail Burns</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -81,29 +81,29 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./index.html" rel="" target="">
+    <a class="nav-link active" href="./index.html" rel="" target="" aria-current="page">
  <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./about.html" rel="" target="" aria-current="page">
+    <a class="nav-link" href="./about.html" rel="" target="">
  <span class="menu-text">About</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="Burns_Resume202311.pdf" rel="" target="">
  <span class="menu-text">Resume</span></a>
-  </li>  
+  </li> 
   <li class="nav-item">
     <a class="nav-link" href="./assignments.html" rel="" target="">
  <span class="menu-text">Assignments</span></a>
-  </li>  
+  </li>
   <li class="nav-item">
     <a class="nav-link" href="./project.html" rel="" target="">
  <span class="menu-text">Database Project</span></a>
-  </li>  
+  </li>
   <li class="nav-item">
     <a class="nav-link" href="/Group_finalproject_alt.html" rel="" target="">
  <span class="menu-text">Data Vizualization Project</span></a>
-  </li> 
+  </li>
 </ul>
             <div class="quarto-navbar-tools ms-auto">
 </div>
@@ -123,7 +123,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">About</h1>
+<h1 class="title">Abigail Burns</h1>
 </div>
 
 
@@ -138,7 +138,8 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p>I am a graduate student at the University of Texas at Dallas studying a Master of Science in Social Data Analytics and Research. I currently serve as GIS Analyst for the Town of Prosper in the Dallas-Fort Worth region of Texas.</p>
+<p>Welcome to my Quarto website where I host projects, data stories and more.</p>
+<p>To learn more about Quarto websites visit <a href="https://quarto.org/docs/websites" class="uri">https://quarto.org/docs/websites</a>.</p>
 
 
 
